[tool.poetry]
name = "django-zapier-trigger"
version = "1.0.beta4"
description = "Django (DRF) backed app for managing Zapier triggers."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-zapier-trigger"
repository = "https://github.com/yunojuno/django-zapier-trigger"
documentation = "https://github.com/yunojuno/django-zapier-trigger"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [{ include = "zapier" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0"
requests = "*"
djangorestframework = "*"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
factory-boy = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
